--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "15.4.2",
-    "react-native": "0.42.3",
-    "redux": "^3.6.0"
+    "react-native": "^0.42.3",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
